--- a/src/Manassa/Manassa.csproj
+++ b/src/Manassa/Manassa.csproj
@@ -75,8 +75,9 @@
     <Compile Include="Converters\BoolVisibilityConverter.cs" />
     <Compile Include="Converters\BoolListSizeConverter.cs" />
     <Compile Include="Converters\AnalysisStepVisibilityConverter.cs" />
-    <Compile Include="Converters\ApplicationStateVisibilityConverter.cs" />
-    <Compile Include="Converters\ApplicationStateIsSelectedConverter.cs" />
+    <Compile Include="Converters\ViewStateVisibilityConverter.cs" />
+    <Compile Include="Converters\ViewStateIsSelectedConverter.cs" />
+    <Compile Include="Converters\IntVisibilityConverter.cs" />
     <Compile Include="Converters\OrientationMsMsConverter.cs" />
     <Compile Include="Converters\DatasetColorConverter.cs" />
     <Compile Include="Converters\DatasetFolderPathConverter.cs" />
@@ -86,21 +87,29 @@
     <Compile Include="Converters\DatasetCountConverter.cs" />
     <Compile Include="Converters\HasMSMSConverter.cs" />
     <Compile Include="Converters\UriToBitmapConverter.cs" />
-    <Compile Include="Data\AnalysisSetupState.cs" />
-    <Compile Include="Data\ApplicationAnalysisState.cs" />
+    <Compile Include="Data\LogicLayerViewModel.cs" />
+    <Compile Include="Data\States\AnalysisSetupState.cs" />
+    <Compile Include="Data\States\AnalysisState.cs" />
     <Compile Include="Data\ApplicationStatusMediator.cs" />
+    <Compile Include="Data\States\ViewState.cs" />
     <Compile Include="Data\DatasetFilterFactory.cs" />
     <Compile Include="Data\DatasetPlotLoader.cs" />
     <Compile Include="Data\ImageConverter.cs" />
     <Compile Include="Data\MultiAlignAnalysisValidator.cs" />
     <Compile Include="Data\RecentAnalysis.cs" />
-    <Compile Include="Data\RectangleFDependency.cs" />
     <Compile Include="Data\StatusMessageWrapper.cs" />
+    <Compile Include="Data\States\StateModerator.cs" />
     <Compile Include="IO\ManassaWorkspaceWriter.cs" />
     <Compile Include="IO\DatasetSearcher.cs" />
     <Compile Include="IO\ManassaWorkspaceReader.cs" />
     <Compile Include="Windows\AlignmentPlotView.xaml.cs">
       <DependentUpon>AlignmentPlotView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Windows\ClustersPlotView.xaml.cs">
+      <DependentUpon>ClustersPlotView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Windows\LoadingAnalysisView.xaml.cs">
+      <DependentUpon>LoadingAnalysisView.xaml</DependentUpon>
     </Compile>
     <Compile Include="Windows\FeaturePlotView.xaml.cs">
       <DependentUpon>FeaturePlotView.xaml</DependentUpon>
@@ -189,11 +198,19 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="Windows\ClustersPlotView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Windows\ClusterToMassTagGrid.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
     <Page Include="Windows\AnalysisRunningControl.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Windows\LoadingAnalysisView.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
@@ -365,6 +382,7 @@
   <ItemGroup>
     <Resource Include="Resources\repeater.png" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PostBuildEvent>copy  ..\..\..\..\lib\$(PlatformName)\System.Data.SQLite.dll "$(TargetDir)System.Data.SQLite.dll"
