--- a/src/Manassa/app.config
+++ b/src/Manassa/app.config
@@ -26,7 +26,7 @@
         <value />
       </setting>
       <setting name="WorkspaceFile" serializeAs="String">
-        <value>manassaworkspace.xml</value>
+        <value>workspace.xml</value>
       </setting>
     </Manassa.Properties.Settings>
   </userSettings>
