--- a/src/MultiAlignCore/MultiAlignCore.csproj
+++ b/src/MultiAlignCore/MultiAlignCore.csproj
@@ -132,11 +132,11 @@
   <ItemGroup>
     <Compile Include="Algorithms\AlgorithmProvider.cs" />
     <Compile Include="Algorithms\Alignment\AlignmentOptions.cs" />
-    <Compile Include="Algorithms\Alignment\ChebyshevAligner.cs" />
     <Compile Include="Algorithms\Alignment\DriftTimeAligner.cs" />
     <Compile Include="Algorithms\Alignment\AsymmetricGaussianScanAdjuster.cs" />
     <Compile Include="Algorithms\Alignment\ILcScanAdjuster.cs" />
     <Compile Include="Algorithms\Alignment\LcScanAdjustment.cs" />
+    <Compile Include="Algorithms\Alignment\LevenburgMarquadtSolverFactory.cs" />
     <Compile Include="Algorithms\Alignment\MsMsAligner.cs" />
     <Compile Include="Algorithms\Alignment\MSMSSpectralClusterer.cs" />
     <Compile Include="Algorithms\Alignment\DriftTimeAlignmentOptions.cs" />
@@ -233,7 +233,6 @@
     <Compile Include="IO\Features\IAlignmentDAO.cs" />
     <Compile Include="IO\Features\Hibernate\AlignmentDAOHibernate.cs" />
     <Compile Include="IO\Features\UMCClusterMsmsWriter.cs" />
-    <Compile Include="IO\Features\MsmsExtractor.cs" />
     <Compile Include="IO\MTDB\APEMassTagDatabaseLoader.cs" />
     <Compile Include="IO\MTDB\MassTagDatabaseLoaderCache.cs" />
     <Compile Include="IO\Reports\IAnalysisReportGenerator.cs" />
@@ -245,7 +244,6 @@
     <Compile Include="IO\Features\Hibernate\MSMSClusterMapDAOHibernate.cs" />
     <Compile Include="IO\Features\Hibernate\DatasetToFactorMap.cs" />
     <Compile Include="IO\Features\IDatasetToFactorMapDAO.cs" />
-    <Compile Include="IO\Features\MSMSFeatureExtractor.cs" />
     <Compile Include="IO\Features\SICExtractor.cs" />
     <Compile Include="IO\Features\UMCClusterAbundanceCrossTabWriter.cs" />
     <Compile Include="IO\Features\FeatureExtractionTableWriter.cs" />
