--- a/src/ElutionProfileTool/app.config
+++ b/src/ElutionProfileTool/app.config
@@ -1,6 +1,18 @@
 <?xml version="1.0"?>
 <configuration>
+  <configSections>
+    <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+      <section name="ElutionProfileTool.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+    </sectionGroup>
+  </configSections>
   <startup useLegacyV2RuntimeActivationPolicy="true">
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/>
   </startup>
+  <userSettings>
+    <ElutionProfileTool.Properties.Settings>
+      <setting name="Grade" serializeAs="String">
+        <value>0</value>
+      </setting>
+    </ElutionProfileTool.Properties.Settings>
+  </userSettings>
 </configuration>
